Fixing Jumbotron and Text, aligning and styling top section

--- a/css/index.css
+++ b/css/index.css
@@ -161,7 +161,7 @@ body {
 /* Navigation Logo */
 /* Navigation Text */
 .container {
-  width: 100%;
+  width: 1024px;
   margin: 0 auto;
   background-color: white;
   border-radius: 8px;
@@ -169,7 +169,6 @@ body {
 .header {
   background-image: url(../../img/home/home-jumbotron.png);
   background-size: cover;
-  width: 100%;
   height: 568px;
 }
 .header .header-nav {
@@ -190,4 +189,31 @@ body {
 }
 .hamburger__line:not(:last-child) {
   margin-bottom: 0.5rem;
+}
+body .showcase {
+  font-size: 6.4rem;
+  font-weight: bold;
+  line-height: 7.5rem;
+  color: #fff;
+  position: absolute;
+  top: 325px;
+  margin-left: 20px;
+}
+body .feature {
+  display: flex;
+  flex-wrap: inherit;
+  align-items: center;
+  /* flex-flow: column; */
+  /* justify-content: space-around; */
+  margin: 100px 0 100px 0;
+}
+body .feature h2 {
+  font-size: 2.8rem;
+  font-weight: bold;
+  color: #222222;
+}
+body .feature .btn {
+  height: 75px;
+  width: 33%;
+  border: 1px solid #222;
 }
