--- a/less/general.less
+++ b/less/general.less
@@ -1,5 +1,5 @@
 .container {
-  width: 100%;
+  width: 1024px;
   // max-width: 1024px;
   margin: 0 auto;
   // height: 100vh;
